--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -10,20 +10,19 @@
   }
 }
 
-/* Fade-out animation */
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
 .fade-in {
-  animation: fadeIn 3s ease 1 forwards;
+  width: 100%;
+  height: 100%;
+  animation: fadeIn 1s ease 1 forwards;
 }
 
-.fade-out {
-  animation: fadeOut 3s ease 1 forwards;
+/* Slide-in animation */
+@keyframes slideIn {
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slide-in {
+  animation: slideIn 1s ease 1 normal forwards;
 }
