--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -2,8 +2,9 @@
   position: relative;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: white;
+  opacity: 0;
 }
 
 .background-video {
@@ -14,34 +15,103 @@
   height: 100%;
   object-fit: cover;
   z-index: -1;
+  filter: blur(1.5px);
 }
 
-.main-content {
-  transform: translate3d(0, -64px, 0);
+.content {
+  width: 100%;
+  height: 100%;
   position: relative;
-  top: 8%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.main-content h1 {
+h1 {
   font-size: 4rem;
   margin: 0;
 }
 
-.main-content h2 {
+h2 {
   font-size: 2rem;
   margin: 0;
 }
 
-.main-content h3 {
+h3 {
   font-size: 1.5rem;
-  margin: 0.4rem;
+  margin: 0;
 }
 
-.main-content h4 {
+h4 {
   font-size: 1rem;
-  margin: 1rem;
+  margin: 4px;
+}
+
+.info {
+  width: 100%;
+  height: 24%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translate3d(0, -64px, 0);
+}
+
+.scroll-list {
+  width: 100%;
+  height: 60%;
+  max-height: 100%;
+  overflow-y: auto;
+  transform: translate3d(-64px, 0, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dashboard {
+  position: relative;
+  width: 80%;
+  height: 100%;
+  margin: 4% 0%;
+  padding: 4%;
+  border-radius: 16px;
+  background-color: rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.announcement {
+  position: relative;
+  width: 90%;
+  height: 44%;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin: 4% 0;
+  padding: 4% 0;
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  overflow: auto;
+}
+
+.announcement .general-situation,
+.announcement .forecast-desc,
+.announcement .outlook {
+  position: absolute;
+  width: 88%;
+
+  transition-property: opacity;
+  transition-duration: 3s;
+  transition-timing-function: linear;
+  opacity: 0;
+}
+
+.announcement h4 {
+  margin: 3px;
+}
+
+.show {
+  opacity: 1;
 }
