--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -10,10 +10,25 @@
   }
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .fade-in {
-  width: 100%;
-  height: 100%;
   animation: fadeIn 1s ease 1 forwards;
+}
+
+.fade-in-3s {
+  animation: fadeIn 3s linear 1 forwards;
+}
+
+.fade-out {
+  animation: fadeOut 1s ease 1 forwards;
 }
 
 /* Slide-in animation */
