--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   height: 100vh;
-  color: white;
+  /* color: rgba(255, 255, 255, 0.67); */
   opacity: 0;
 }
 
@@ -85,7 +85,7 @@ h4 {
 .announcement {
   position: relative;
   width: 90%;
-  height: 44%;
+  height: 24%;
   background-color: rgba(0, 0, 0, 0.1);
   margin: 4% 0;
   padding: 4% 0;
@@ -94,6 +94,10 @@ h4 {
   display: flex;
   justify-content: center;
   overflow: auto;
+}
+
+.announcement::-webkit-scrollbar {
+  display: none;
 }
 
 .announcement .general-situation,
@@ -110,6 +114,24 @@ h4 {
 
 .announcement h4 {
   margin: 3px;
+}
+
+.play-icon {
+  width: 100%;
+  right: 8px;
+  position: absolute;
+  display: flex;
+  justify-content: end;
+  opacity: 0;
+}
+
+.scroll-icon {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  transform: translate3d(0, -8px, 0);
+  display: flex;
+  justify-content: end;
 }
 
 .show {
