--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -27,6 +27,10 @@
   animation: fadeIn 3s linear 1 forwards;
 }
 
+.fade-in-out {
+  animation: fadeIn 1s ease infinite alternate;
+}
+
 .fade-out {
   animation: fadeOut 1s ease 1 forwards;
 }
@@ -40,4 +44,8 @@
 
 .slide-in {
   animation: slideIn 1s ease 1 normal forwards;
+}
+
+.slide-in-out {
+  animation: slideIn 1s ease infinite alternate;
 }
