--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -43,9 +43,25 @@
 }
 
 .slide-in {
-  animation: slideIn 1s ease 1 normal forwards;
+  animation: slideIn .8s ease 1 normal forwards;
 }
 
 .slide-in-out {
   animation: slideIn 1s ease infinite alternate;
+}
+
+@keyframes scrollUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.scroll-up {
+  animation: scrollUpDown 3s ease-in-out 1s 1 forwards;
 }
