--- a/src/pages/Forecast/ForecastPage.css
+++ b/src/pages/Forecast/ForecastPage.css
@@ -21,7 +21,7 @@ h1 {
   margin: 0;
 }
 
-.content{
+.forecast-content{
     width: 100%;
     height: 100%;
     position: relative;
@@ -29,5 +29,4 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transform: translate3d(80%, 0, 0);
 }
